--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "normalize.css": "^8.0.1",
     "pinia": "^2.0.34",
     "vue": "^3.2.41",
+    "vue-i18n": "^9.3.0-beta.17",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
