--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.1.6",
     "swiper": "^11.0.4",
+    "three": "^0.158.0",
     "vue": "^3.3.4",
     "vue-i18n": "^9.4.1",
     "vue-loading-overlay": "^6.0.3",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@types/node": "^20.4.5",
     "@types/nprogress": "^0.2.0",
+    "@types/three": "^0.158.3",
     "@vitejs/plugin-vue": "^4.2.3",
     "less": "^4.1.3",
     "terser": "^5.19.2",
