--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,8 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+src/assets/mv/PART2.mp4
+src/assets/mv/55_1701258800.mp4
+src/assets/mv/502_1701518503.mp4
+src/assets/mv/q20.mp4
